adds box borders

--- a/introduction.tex
+++ b/introduction.tex
@@ -35,7 +35,7 @@ of local vs. REST APIs can be depicted by an example as follows:
   }%
 }
 \begin{figure}[htb]
-  \includegraphics[width=\linewidth]{javadoc.png}
+  \fbox{\includegraphics[width=\linewidth]{javadoc.png}}
   \captionsource{Example Local API Documentation from Formatted Comments Using JavaDoc}{Log4J}
   \label{fig:javadoc}
 \end{figure}
@@ -48,7 +48,7 @@ automatically parse such comments to render the API documentation. Since the com
 comments, and maintain it manually when the API evolves.
 
 \begin{figure}[htb]
-  \includegraphics[width=\linewidth]{wordpress_doc.png}
+  \fbox{\includegraphics[width=\linewidth]{wordpress_doc.png}}
   \captionsource{Difference between a REST API Code and its Documentation}{WordPress REST API}
   \label{fig:wordpress_doc}
 \end{figure}
