--- a/symbols.tex
+++ b/symbols.tex
@@ -14,7 +14,7 @@ Symbol~~~~~\= \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ 
 \addsymbol \mbox{WSDL}: {Web Service Definition Language}
 \addsymbol \mbox{XML}: {Extensible Markup Language}
 \addsymbol \mbox{REST API Developer}: {A software developer that implements REST API systems}
-\addsymbol \mbox{REST API Client Developer}: {A software developer that implements systems that use one or more REST APIs}
+\addsymbol \mbox{REST API Client Developer}: {A software developer that implements systems using REST APIs}
 
 
 
